fix: fix file name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="work work__padding-indent">
                     <p class="work__company work__text-indent">BCJ GAME JAM</p>
                     <p class="work__position work__text-indent">Lead Developer | May 2021</p>
-                    <a href="https://www.youtube.com/watch?v=G29Qc43YvTU&ab_channel=SergeiBernat"><img class="photo__game scale" src="img/Game.png"></a>
+                    <a href="https://www.youtube.com/watch?v=G29Qc43YvTU&ab_channel=SergeiBernat"><img class="photo__game scale" src="img/Game.PNG"></a>
                     <p class="work__text work__text-indent">Developed game in three days on Unity2d in team of five people.</p>
                 </div>
                 <div class="work work__padding-indent">
