fix: description changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="work__company work__text-indent">BCJ GAME JAM</p>
                     <p class="work__position work__text-indent">Lead Developer | May 2021</p>
                     <a href="https://www.youtube.com/watch?v=G29Qc43YvTU&ab_channel=SergeiBernat"><img class="photo__game scale" src="img/Game.PNG"></a>
-                    <p class="work__text work__text-indent">Developed game in three days on Unity2d in team of five people.</p>
+                    <p class="work__text work__text-indent">In a group of 5 people we developed a game during a 3-day gamejam using Unity2d.</p>
                 </div>
                 <div class="work work__padding-indent">
                     <p class="work__company work__text-indent">My Graduation Project</p>
@@ -102,7 +102,7 @@
                 </div>
                 <ul class="info__desc info__desc-padding info__desc-indent">
                     <li class="info__text">Russian (native)</li>
-                    <li class="info__text">English (Elementary/studying now)</li>
+                    <li class="info__text">English (Beginner/studying now)</li>
                 </ul>
             </div>
         </div>
