fix: change text

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                     <h2 class="label__text">Technologies</h2>
                 </div>
                 <ul class="info__desc info__desc-padding info__desc-indent">
-                    <li class="info__text">Windows Form (basic)</li>
-                    <li class="info__text">ML.NET (basic)</li>
-                    <li class="info__text">Unity2d (basic)</li>
-                    <li class="info__text">Html (basic)</li>
-                    <li class="info__text">Css (basic)</li>
-                    <li class="info__text">Flurl (basic)</li>
-                    <li class="info__text">EmguCV (basic)</li>
-                    <li class="info__text">Postman (basic)</li>
+                    <li class="info__text">Windows Form</li>
+                    <li class="info__text">ML.NET (Model Builder)</li>
+                    <li class="info__text">Unity2d</li>
+                    <li class="info__text">Html</li>
+                    <li class="info__text">Css</li>
+                    <li class="info__text">Flurl</li>
+                    <li class="info__text">EmguCV</li>
+                    <li class="info__text">Postman</li>
                     <li class="info__text">Git</li>
                     <li class="info__text">ASP.NET (studying now)</li>
                     <li class="info__text">SQL Server (studying now)</li>
@@ -102,7 +102,7 @@
                 </div>
                 <ul class="info__desc info__desc-padding info__desc-indent">
                     <li class="info__text">Russian (native)</li>
-                    <li class="info__text">English (Beginner/studying now)</li>
+                    <li class="info__text">English (A2/studying now)</li>
                 </ul>
             </div>
         </div>
